apps/monitoring/manifests/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 12.3.0
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: kube-prometheus
  template:
    metadata:
      annotations:
        checksum/grafana-config: 6f658524d95b6d900a048eccac6c5d32
        checksum/grafana-dashboardproviders: 7aa18f7ed8ccc056994e1d47f192bbaa
        checksum/grafana-datasources: 722c821b94ea010afe7df739fc3e3583
        parca.dev/scrape: "true"
      labels:
        app.kubernetes.io/component: grafana
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 12.3.0
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: GF_SERVER_ROOT_URL
              value: https://grafana.ankhmorpork.thaum.xyz
            - name: GF_AUTH_ANONYMOUS_ENABLED
              value: "true"
            - name: GF_AUTH_DISABLE_LOGIN_FORM
              value: "false"
            - name: GF_AUTH_SIGNOUT_REDIRECT_URL
              value: https://login.krupa.net.pl/api/oidc/end-session
            - name: GF_AUTH_BASIC_ENABLED
              value: "true"

            - name: GF_AUTH_GENERIC_OAUTH_ENABLED
              value: "true"
            - name: GF_AUTH_GENERIC_OAUTH_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: clientId
                  name: grafana-oidc
            - name: GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: clientSecret
                  name: grafana-oidc
            - name: GF_AUTH_GENERIC_OAUTH_AUTH_URL
              value: https://login.krupa.net.pl/authorize
            - name: GF_AUTH_GENERIC_OAUTH_TOKEN_URL
              value: https://login.krupa.net.pl/api/oidc/token
            #- name: GF_AUTH_GENERIC_OAUTH_API_URL
            #  value: https://login.krupa.net.pl/api/oidc/userinfo

            - name: GF_SNAPSHOTS_EXTERNAL_ENABLED
              value: "false"
            - name: GF_ANALYTICS_REPORTING_ENABLED
              value: "false"
            - name: GF_ANALYTICS_CHECK_FOR_UPDATES
              value: "false"
            - name: GF_ANALYTICS_CHECK_FOR_PLUGIN_UPDATES
              value: "false"
            - name: GF_INSTALL_PLUGINS
              value: "yesoreyeram-infinity-datasource"
          image: grafana/grafana:13.1.1
          name: grafana
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
          resources:
            limits:
              cpu: 400m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 59Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage
            - mountPath: /etc/grafana/provisioning/datasources
              name: grafana-datasources
            - mountPath: /tmp
              name: tmp
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 472
      serviceAccountName: grafana
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-app-data
        - name: grafana-datasources
          secret:
            secretName: grafana-datasources
        - emptyDir: {}
          name: tmp
