apps/monitoring/manifests/grafana/05_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: monitoring
spec:
  ports:
  - name: http-grafana
    port: 3000
    targetPort: http-grafana
  selector:
    app.kubernetes.io/name: grafana
